Closed #55 Bug. Long p overflow the card

--- a/src/App.css
+++ b/src/App.css
@@ -153,10 +153,6 @@ a {
   flex-direction: column;
 }
 
-p {
-  white-space: pre;
-}
-
 /* EditProfile View */
 
 #edit-profile button,
